--- a/app/views/shared/_about_us.html.erb
+++ b/app/views/shared/_about_us.html.erb
@@ -2,7 +2,7 @@ Ispick is an automatic anime artworks aggregator.<br />
   <br />
     Not only you can search images in the database, but also you can create image feeds based on certain text tags. Currently there is a lot of anime artwork related sites, and most of artworks in them remain unseen. For now, this problem is partly solved by manual aggregating taken place on websites like Tumblr / Pinterest. <br />
   <br />
-    However. over the long term we believe we can help you more by providing our automated system, as Google did years ago. For now it only supports image search by limited text tags, but we're planning to implement image search based on image, using deep neural networks.
+    However, over the long term we believe we can help you more by providing our automated system, as Google did years ago. For now it only supports image search by limited text tags, but we're planning to implement image search based on image, using deep neural networks.
   Our goal is "Letting people see anime artworks they like automatically", and our mission is "To solve problems and improve the world by intelligent, automated systems".<br />
   <br />
     Since we are at the very first stage and the system need to be adjusted or changed a lot, we've decided that we continue improving this site with your feedbacks.<br />
