--- a/app/views/shared/_privacy_policy_content.html.erb
+++ b/app/views/shared/_privacy_policy_content.html.erb
@@ -1,4 +1,4 @@
-This Privacy Policy governs the manner in which Ispick collects, uses, maintains and discloses information collected from users (each, a "User") of the <a href="ispick.com">ispick.com</a> website ("Site"). This privacy policy applies to the Site and all products and services offered by Ispick.<br><br>
+This Privacy Policy governs the manner in which Ispick collects, uses, maintains and discloses information collected from users (each, a "User") of the <a href="ispicks.com">ispicks.com</a> website ("Site"). This privacy policy applies to the Site and all products and services offered by Ispick.<br><br>
 
 <b>Personal identification information</b><br><br>
 
@@ -50,8 +50,8 @@ By using this Site, you signify your acceptance of this policy. If you do not ag
 <b>Contacting us</b><br><br>
 
 If you have any questions about this Privacy Policy, the practices of this site, or your dealings with this site, please contact us at:<br>
-<a href="ispick.com">Ispick</a><br>
-<a href="ispick.com">ispick.com</a><br>
+<a href="ispicks.com">Ispick</a><br>
+<a href="ispicks.com">ispicks.com</a><br>
 ispic6@gmail.com<br>
 <br>
 This document was last updated on August 13, 2014<br><br>
