#270 Style signup/login page in the same way as the top page

--- a/app/views/pages/signup_with_password.html.erb
+++ b/app/views/pages/signup_with_password.html.erb
@@ -1,20 +1,32 @@
-<%= render partial: 'shared/top_description' %>
-
-<div class="top-image">
-  <%= link_to (image_tag asset_path('top_madoka.jpg')), '/', style: " z-index: 1;"%>
+<div class="container-fluid top">
+  <div class="row">
+    <div class="col-md-6 col-centered">
+      <%= render partial: 'shared/top_description' %>
+    </div>
+    <br />
+  </div>
 </div>
 
-<div class="wrapper-oauth">
-  <div class="btn-group-vertical btn-group-oauth">
-    <%= button_group do %>
-      <%= bs_button_to 'Create an account with Facebook', user_omniauth_authorize_path(:facebook), class: "btn btn-default btn-block" %><br>
-      <%= bs_button_to 'Create an account with Twitter', user_omniauth_authorize_path(:twitter), class: "btn btn-default btn-block" %><br>
-      <%= bs_button_to 'Create an account with Tumblr', user_omniauth_authorize_path(:tumblr), class: "btn btn-default btn-block" %><br>
-      <%= bs_button_to 'Create an account with Email', '/sign_up', class: "btn btn-default btn-block" %><br>
-    <% end %>
+<div class="container-fluid">
+  <div class="top col-md-8 col-centered">
+  <div class="top-image">
+    <%= link_to (image_tag asset_path('background0.png')), '/' %>
   </div>
-  <%= render partial: 'shared/warning' %>
-  <div align="center">
-    <%= bs_button_to 'Login', '/signin_with_password', class: 'btn-mini btn-default' %>
+
+  <div class="wrapper-oauth">
+    <div class="btn-group-vertical btn-group-oauth">
+      <%= button_group do %>
+        <%= bs_button_to 'Create an account with Facebook', user_omniauth_authorize_path(:facebook), class: "btn btn-default btn-block" %><br>
+        <%= bs_button_to 'Create an account with Twitter', user_omniauth_authorize_path(:twitter), class: "btn btn-default btn-block" %><br>
+        <%= bs_button_to 'Create an account with Tumblr', user_omniauth_authorize_path(:tumblr), class: "btn btn-default btn-block" %><br>
+        <%= bs_button_to 'Create an account with Email', '/sign_up', class: "btn btn-default btn-block" %><br>
+      <% end %>
+    </div>
+    <%= render partial: 'shared/warning' %>
+    <div align="center">
+      <%= bs_button_to 'Log in', '/signin_with_password', class: 'btn-mini btn-default' %>
+    </div>
   </div>
+<br />
+<br />
 </div>
