--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
 <!--
-  ユーザ情報の編集フォーム
+  The form for editing user information
   - Using gem: https://github.com/bootstrap-ruby/rails-bootstrap-forms
 -->
 
