--- a/app/views/shared/_show_image.html.erb
+++ b/app/views/shared/_show_image.html.erb
@@ -28,7 +28,7 @@
 
   <div class="share-button"><%= tweet_button(count: 'none') %></div>
   <div class="share-button">
-    <!-- Likeボタンを表示するためにfacebook appをpublicに指定する必要があるので、仮の画像を配置 -->
+    <!-- We need to set the app public to use this like button -->
     <%# like_button(CONFIG['facebook_app_id'].to_i) %>
   </div>
   <div class="share-button"><%= pinit_button(url: image.page_url, media: image.original_url, description: strip_tags(image.caption)) %></div>
