--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -3,14 +3,18 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .top-image {
-  position  : relative;
+  //position  : relative;
+  text-align: center;
+  //align:      center;
   width     : 500px;
   height    : 300px;
-  float     : left;
+  //float     : left;
   z-index   : 1;
 }
 .wrapper-oauth {
-  position  : relative;
+  //position  : relative;
+  text-align: center;
+  //align:      center;
   width     : 300px;
   height    : 300px;
   background-color : #E4F5F5;
@@ -65,6 +69,10 @@
 .top {
   text-align: center;
   align: center;
+
+}
+.background {
+  background-image: url('background.png');
 }
 .col-centered{
   float: none;
