--- a/app/views/shared/_modal_avatar.html.erb
+++ b/app/views/shared/_modal_avatar.html.erb
@@ -1,4 +1,4 @@
-<!-- Avatar画像設定に使うmodal -->
+<!-- The modal window for editing an avatar image -->
 
 <div class="modal modal-avatar" id="the-modal-avatar" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
   <div class="modal-dialog">
