--- a/app/views/users/home.js.erb
+++ b/app/views/users/home.js.erb
@@ -1,5 +1,6 @@
 <% if @images.next_page %>
   $('.pagination').replaceWith('<%= j paginate @images %>');
+  $('.pagination').hide();
 <% else %>
   $('.pagination').remove();
 <% end %>
