--- a/app/views/shared/_modal_image.html.erb
+++ b/app/views/shared/_modal_image.html.erb
@@ -4,7 +4,7 @@
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
       <br />
       <!-- javascriptからpartial templateをbodyに描画する -->
-      <div class="modal-body modal-image" style="word-wrap: break-word;">
+      <div id="modal-image-body" class="modal-body modal-image" style="word-wrap: break-word;">
       </div>
     </div>
   </div>
