--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="Ispick">
+<html>
 <head>
   <title>Ispick</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
