#318 Temporarily back to the infinite-scroll lib

--- a/app/views/images/_show.js.erb
+++ b/app/views/images/_show.js.erb
@@ -1,2 +1,2 @@
-$(".modal-image.modal-body").html("<%= escape_javascript(render @image) %>");
+$("#modal-image-body").html("<%= escape_javascript(render @image) %>");
 $("#modal-image").modal('show');
