--- a/app/views/users/_home_images.html.erb
+++ b/app/views/users/_home_images.html.erb
@@ -1,4 +1,4 @@
-<%= paginate images unless images.nil? %>
+<%# paginate images unless images.nil? %>
 
 <div class="wrap">
   <% images.each_with_index do |image, index| %>
