--- a/app/assets/javascripts/component.js.coffee.erb
+++ b/app/assets/javascripts/component.js.coffee.erb
@@ -19,31 +19,47 @@ class @Component
       #window.Clip.removeClipEvents(true)
       #window.Clip.initButtons(true)
     )###
-    $el = $('.wrap')
-    window.listView = new infinity.ListView($el)
-    window.scrollReady = true
-    $(window).scroll ->
-      console.log(window.scrollReady)
-      return if window.scrollReady == false
+    console.log(document.URL)
+    console.log(document.URL.indexOf('home'))
+    console.log(document.URL.indexOf('home') > -1)
+    #console.log(document.URL.indexOf('home') > -1)
+    #if window.action == 'home'
+    if document.URL.indexOf('home') > -1
+      console.log('t')
+      window.$el = $('.wrap')
+      window.listView = new infinity.ListView(window.$el)
+      window.scrollReady = true
 
-      url = $('nav.pagination a[rel=next]').attr('href')
-      if url and $(window).scrollTop() > $(document).height() - $(window).height() - 50
-        $('.pagination').text("Fetching more products...")
-        window.scrollReady = false
-        $.getScript(url)
-        $.ajax({
-          cache: false,
-          url: url,
-          type: 'GET',
-          dataType: 'html',
-          success: (data) ->
-            window.listView.append($(data).find('.box'))
-            console.log(window.listView.pages[0].items.length)
-            window.scrollReady = true
-          failure: (data) ->
-            console.log('failed')
-            window.scrollReady = true
-        })
+      $(window).on('popstate', (e)->
+        console.log("page transition occurred!")
+        #$el = $('.wrap')
+        #window.listView = new infinity.ListView($el)
+      )
+
+      $(window).scroll ->
+        console.log(window.scrollReady)
+        return if window.scrollReady == false
+
+        url = $('nav.pagination a[rel=next]').attr('href')
+        if url and $(window).scrollTop() > $(document).height() - $(window).height() - 50
+          $('.pagination').text("Fetching more products...")
+          window.scrollReady = false
+          $.getScript(url)
+          $.ajax({
+            cache: false,
+            url: url,
+            type: 'GET',
+            dataType: 'html',
+            success: (data) ->
+              window.listView.append($(data).find('.box'))
+              count = window.listView.pages[0].items.length
+              console.log(count)
+              console.log(window.listView.pages[0].items[count-1])
+              window.scrollReady = true
+            failure: (data) ->
+              console.log('failed')
+              window.scrollReady = true
+          })
 
 
   initCalender: () ->
