#270 Use recent scraped images at the top

--- a/app/views/shared/_top_description.html.erb
+++ b/app/views/shared/_top_description.html.erb
@@ -2,5 +2,5 @@
 <p>
   Ispick is an automated anime artworks aggregation service!<br />
 You can create various anime image feeds based on text tags.<br />
-This is the beta version, so please note that your user's data including favorited images and followed tags could be deleted after the next version is up.
+This is the beta version, so please note that your user's data including favorited images and followed tags could be deleted after the next update.
 </p>
