--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -2,27 +2,40 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.col-centered{
+  float: none;
+  margin: 0 auto;
+}
+
 .top-image {
-  //position  : relative;
   text-align: center;
-  //align:      center;
   width     : 500px;
   height    : 300px;
-  //float     : left;
-  z-index   : 1;
+  z-index   : 2;
+}
+.top-wrap {
+  background-color : #E4F5F5;
+  text-align: center;
+  vertical-align:middle;
+  align: center;
+  height: 550px;
+  padding: 10px;
+  margin: auto;
+  border: 2px solid #7ACECE;
+  border-radius: 15px;
+  z-index   : 9999;
 }
 .wrapper-oauth {
-  //position  : relative;
   text-align: center;
-  //align:      center;
+  display: block;
   width     : 300px;
   height    : 300px;
-  background-color : #E4F5F5;
-  margin    : 10;
+  background-color : #7ACECE;
+  margin    : auto;
   padding   : 10px;
   border    : 10px;
   overflow  : hidden;
-  z-index   : 2;
+  z-index   : 9999;
 }
 .wrapper-sign-in {
   position  : relative;
@@ -69,12 +82,24 @@
 .top {
   text-align: center;
   align: center;
+}
+.top_background {
+  background-size: contain;
+  //background-image:url('http://666a658c624a3c03a6b2-25cda059d975d2f318c03e90bcf17c40.r92.cf1.rackcdn.com/unsplash_527bf56961712_1.JPG');
+  display: block;
+  //width: 1200px;
+  height: 800px;
+  left: 0;
+  position: fixed;
+  overflow:hidden;
+  right: 0;
+  z-index: -1;
+  margin: -5px -10px -10px -5px;
 
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
 }
-.background {
-  background-image: url('background.png');
-}
-.col-centered{
-  float: none;
-  margin: 0 auto;
-}
+
