--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,6 +16,7 @@
       <%= navbar_item 'Home', home_users_path %>
       <%= navbar_item 'Boards', boards_users_path %>
       <%= navbar_item 'Preferences', preferences_users_path %>
+      <%= navbar_item 'Preferences', page_path('about us') %>
     <% end %>
 
     <div style="text-align:right;">
