#270 Use static background

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <!-- image rendering starts from here -->
 <div class="top_background">
-  <%= render partial: 'shared/render_images', locals: { images: @images } %>
+  <%# render partial: 'shared/render_images', locals: { images: @images } %>
 </div>
 
 <div class="container">
