--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -26,7 +26,7 @@ a {
   }
   &:hover {
     color: #000;
-    background-color: #fff;
+    //background-color: #fff;
     text-decoration: underline;
   }
 }
