--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,7 @@
 <!-- image rendering starts from here -->
-<div class="top_background">
+<%= javascript_include_tag 'users_home' %>
+<%= render partial: 'shared/render_images', locals: { images: @images } %>
+<!--<div class="top_background">
   <%# render partial: 'shared/render_images', locals: { images: @images } %>
 </div>
 
@@ -25,4 +27,4 @@
       </div>
 
   </div>
-</div>
+</div>-->
