--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,7 +16,7 @@
       <%= navbar_item 'Home', home_users_path %>
       <%= navbar_item 'Boards', boards_users_path %>
       <%= navbar_item 'Preferences', preferences_users_path %>
-      <%= navbar_item 'Preferences', page_path('about us') %>
+      <%= navbar_item 'About us', new_contact_path %>
     <% end %>
 
     <div style="text-align:right;">
