--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -9,6 +9,13 @@
 .btn-group-oauth {
   //width     : 200px;
   width     : 80%;
+  line-height: 5px;
+}
+form .line {
+  margin-bottom: 5px; //adjust to your liking
+}
+.form-group {
+  margin-bottom: 5px;
 }
 .top-description {
   text-align: center;
@@ -51,13 +58,8 @@
   z-index   : 9999;
 }
 .wrapper-sign-in {
-  position  : relative;
-  width     : 300px;
-  height    : 350px;
+  line-height: 5px;
   background-color : #E4F5F5;
-  margin    : 10;
-  padding   : 10px;
-  border    : 10px;
   overflow  : hidden;
   z-index   : 2;
 }
