--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
 <div id='footer'>
   <hr>
-  <p>2014-2020 Ispick.
+  <p>2014-2020 <%= link_to 'Ispick', '/' %>.
     <%= link_to 'Privacy Policy', page_path('privacy_policy') %> /
     <%= link_to 'Term of Service', page_path('term_of_service') %> /
     <%= link_to 'About us', new_contact_path %>
