--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -19,11 +19,12 @@ form .line {
 }
 .top-description {
   text-align: center;
-  background-color : #E4F5F5//#7ACECE;
+  background-color : #E4F5F5;//#7ACECE;
   //overflow:scroll;
   //margin: 0px;
   //padding-bottom: 20%;
   //padding: 5px;
+  height: 120px;
 }
 .top-image {
   text-align: center;
@@ -49,7 +50,7 @@ form .line {
   font-size: 8px;
   line-height: 10px;
   //width     : 300px;
-  //height    : 250px;
+  height    : 220px;
   background-color : #7ACECE;
   //margin    : 0px;
   //padding-bottom: 20%;
