--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -16,9 +16,15 @@
   height: auto;
   //border: 1px solid #ddd;
 }
-.loader {
+#loader {
+  position: absolute;
   text-align: center;
-  z-index: 3;
+  z-index: 10;
+  hidden: true;
+  //background-image: url('loader_sprites.png');
+  //background-size:contain;
+  height: auto;
+  //background-color:rgba(255,0,0,0.5);
 }
 
 // デバッグ用の画像一覧ページで使用。
