--- a/app/views/users/_home_images.html.erb
+++ b/app/views/users/_home_images.html.erb
@@ -1,43 +1,22 @@
-<%# paginate images unless images.nil? %>
-
-<!--<div class="wrap">
-  <% images.each_with_index do |image, index| %>
-
-    <div class="box">
-      <div class="boxInner">
-        <%= render_image(image) %>
-
-        <div class="titleBox">
-          <div class="id"><%= image.id %></div>
-          <%= button_group class: 'pull-right blocks' do %>
-            <%= render_clip_button(image) %>
-            <%= render_show_button(image) %>
-            <%= render_show_debug_button(image) %>
-          <% end %>
-          <br />
-        </div>
-
-        <div class="title">
-          <%= image.title.to_s %><br />
-          <div class="time-string">
-            <%# "CA: #{get_jst_string(image.created_at)}" %><br />
-            <%= "PA: #{get_jst_string(image.posted_at)}" %>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  <% end %>
-</div>
--->
 <div class="wrapper">
   <% images.each_with_index do |image, index| %>
-    <div class="block">
-      <% if image.page_url %>
-          <%= link_to image_tag(image.data.url(:thumb)), image.page_url.html_safe, :target => "_blank" %>
-        <% else %>
-          <%= link_to image_tag(image.data.url(:thumb)), image.src_url.html_safe, :target => "_blank" %>
+    <div class="block has-gutters">
+      <%= render_image(image) %>
+      <div class="titleBox">
+        <div class="id"><%= image.id %></div>
+        <%= button_group class: 'pull-right blocks' do %>
+          <%= render_clip_button(image) %>
+          <%= render_show_button(image) %>
+          <%= render_show_debug_button(image) %>
         <% end %>
+        <br />
+      </div>
+      <div class="title">
+          <%= image.title.to_s %><br />
+          <div class="time-string">
+            <br /><%= "PA: #{get_jst_string(image.posted_at)}" %>
+          </div>
+        </div>
     </div>
   <% end %>
   <div id="loader">
