--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag 'users_home' %>
+<%# javascript_include_tag 'users_home' %>
 <%= javascript_include_tag 'core' %>
 <%= stylesheet_link_tag 'users' %>
 <%= stylesheet_link_tag 'images_detail' %>
