--- a/app/views/shared/_show_image.html.erb
+++ b/app/views/shared/_show_image.html.erb
@@ -15,6 +15,8 @@
   <br /><br />
   <%= link_glyphicon %> <%= link_to "#{image.page_url}", image.page_url.html_safe, :target => "_blank" if image.page_url %>
   <br /><br />
+  Sharable size <%= "#{image.original_width}, #{image.original_height}" %>
+  <br /><br />
   <%= tags_glyphicon %>
   <% image.tags.each do |tag| %>
     <%= bs_button_to tag.name, { controller: 'users', action: 'search', query: "#{tag.name}" }, class: 'btn-default btn-xs' %>
