--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -24,7 +24,7 @@ form .line {
   //margin: 0px;
   //padding-bottom: 20%;
   //padding: 5px;
-  height: 120px;
+  //height: 120px;
 }
 .top-image {
   text-align: center;
@@ -50,7 +50,7 @@ form .line {
   font-size: 8px;
   line-height: 10px;
   //width     : 300px;
-  height    : 220px;
+  //height    : 220px;
   background-color : #7ACECE;
   //margin    : 0px;
   //padding-bottom: 20%;
