--- a/app/views/shared/_render_images.html.erb
+++ b/app/views/shared/_render_images.html.erb
@@ -1,45 +1,57 @@
-<div class="container-fluid">
+<!-- A version of embedding description and login form as boxes. -->
+<!-- Render description box and login form box only at the first time -->
+<br />
+<div class="wrapper">
   <% if @first %>
-    <div class="t">
+    <div class="block has-gutters">
+      <div class="height">260</div>
       <div class="top-description">
-      <%= render partial: 'shared/top_description' %>
+        <br />
+        <%= render partial: 'shared/top_description' %>
+        <br />
+      </div>
     </div>
-
-    <div class="t">
+    <div class="block has-gutters">
+      <div class="height">230</div>
       <div class="wrapper-oauth">
         <br />
         <%= render partial: 'shared/top/wrapper_oauth' %>
+        <br />
+        <br />
       </div>
     </div>
   <% end %>
-</div>
-
-<!-- A version of embedding description and login form as boxes. -->
-<div id="wrapper">
-  <!-- Render description box and login form box only at the first time -->
-
 
   <!-- Render images as usual -->
   <% images.each_with_index do |image, index| %>
-    <div class="image">
+    <div class="block has-gutters">
+      <div class="height"><%= image.height %></div>
+      <% if image.page_url %>
+        <%= link_to image_tag(image.data.url(:thumb)), image.page_url.html_safe, :target => "_blank" %>
+      <% else %>
+        <%= link_to image_tag(image.data.url(:thumb)), image.src_url.html_safe, :target => "_blank" %>
+      <% end %>
 
-        <% if image.page_url %>
-          <%= link_to image_tag(image.data.url(:thumb)), image.page_url.html_safe, :target => "_blank" %>
-        <% else %>
-          <%= link_to image_tag(image.data.url(:thumb)), image.src_url.html_safe, :target => "_blank" %>
+      <!--<div class="titleBox">
+        <div class="id"><%= image.id %></div>
+        <%= button_group class: 'pull-right blocks' do %>
+          <%= render_clip_button(image) %>
+          <%= render_show_button(image) %>
+          <%= render_show_debug_button(image) %>
         <% end %>
-
-        <div class="title">
+        <br />
+      </div>-->
+      <div class="title">
           <%= image.title.to_s %><br />
           <div class="time-string">
-            <br />
-            <%= "Posted at: #{get_jst_string(image.posted_at)}" %>
+            <br /><%= "PA: #{get_jst_string(image.posted_at)}" %>
           </div>
         </div>
-
-      <!--<div class="boxInner"></div>-->
     </div>
   <% end %>
+  <div id="loader">
+    <%= image_tag asset_path('round_loader_mini.gif')%>
+  </div>
 
 </div>
 
