--- a/app/views/shared/top/_wrapper_sign_up.html.erb
+++ b/app/views/shared/top/_wrapper_sign_up.html.erb
@@ -6,7 +6,7 @@
     <%= bs_button_to 'Create an account with Email', '/sign_up', class: "btn btn-default btn-block" %><br>
   <% end %>
 </div>
-<%= render partial: 'shared/warning' %>
+<%= render partial: 'shared/top/warning' %>
 <div align="center">
-  <%= bs_button_to 'Log in', '/signin_with_password', class: 'btn-mini btn-default' %>
+  <%= bs_button_to 'Log in', '/signin_with_password' %>
 </div>
