--- a/app/views/shared/top/_wrapper_oauth.html.erb
+++ b/app/views/shared/top/_wrapper_oauth.html.erb
@@ -6,5 +6,5 @@
 </div>
 <%= render partial: 'shared/top/warning' %>
 <div align="center">
-  <%= bs_button_to 'Log in', '/signin_with_password' %>
+  <%= bs_button_to 'Log in', '/signin_with_password', class: "btn btn-default" %>
 </div>
