#333 Reform 'Boards' page

--- a/app/assets/javascripts/component.js.coffee.erb
+++ b/app/assets/javascripts/component.js.coffee.erb
@@ -126,9 +126,10 @@ class @Component
     $('.modal-avatar').on('show.bs.modal hide.bs.modal', (e) ->
       $('body').toggleClass('modal-color-none')
     )
-    $('#modal-image').on('show.bs.modal hide.bs.modal', (e) ->
-      $('body').toggleClass('modal-color-none')
-    )
+    #$('#modal-image').on('show.bs.modal hide.bs.modal', (e) ->
+    #$('.modal-images').on('show.bs.modal hide.bs.modal', (e) ->
+    #  $('body').toggleClass('modal-color-none')
+    #)
 
   initBoards = () ->
     #
