--- a/app/views/users/boards_no_images.html.erb
+++ b/app/views/users/boards_no_images.html.erb
@@ -1,3 +1,1 @@
-<h1>Clipped Images</h1>
-<br>
-ボードはまだ作成されていません。クリップ機能を使用するには、ホーム画面から新規にボードを追加してください。
+You don't seem to have any boards. Let's create one on the <%= link_to 'home', home_users_path %> page!
