--- a/app/views/users/boards.html.erb
+++ b/app/views/users/boards.html.erb
@@ -15,27 +15,34 @@
   <%= bs_button_to pencil_glyphicon, edit_image_board_path(id: @image_board.id), remote: true, class: 'btn btn-default' %>
   <%= bs_button_to remove_glyphicon, @image_board, method: :delete, data: { confirm: 'Are you sure to delete this board? This operation cannot be undone.' }, class: 'btn btn-default' %>
 <% end %>
-
+<br /><br />
 
 <!-- Display the images of the selected board. Same as home.html.erb -->
-<div class="wrap">
-  <% @favored_images.each do |favored_image| %>
-    <div class="box">
-      <div class="boxInner">
-        <%# link_to(image_tag(image.data.url), { controller: 'favored_images', action: 'show', id: image.id.to_s, remote: true, 'data-toggle' => "modal", 'data-target' => '#modal-image' }) %>
-        <%= render_favored_image(favored_image) %>
-        <div class="titleBox">
-          <%= button_group class: 'pull-right blocks' do %>
-            <%= render_unclip_button(favored_image) %>
-            <%= render_show_button(favored_image) %>
-          <% end %>
-        </div>
-        <div class="title">
-          <%= favored_image.title.to_s %><br />
-        </div>
+
+<div class="wrapper">
+  <% @favored_images.each_with_index do |favored_image, index| %>
+    <div class="block has-gutters">
+      <div class="height"><%= favored_image.height %></div>
+      <%= render_favored_image(favored_image) %>
+
+      <div class="titleBox">
+        <%= button_group class: 'pull-right blocks' do %>
+          <%= render_unclip_button(favored_image) %>
+          <%= render_show_button(favored_image) %>
+        <% end %>
+        <br />
       </div>
+      <div class="title">
+          <%= favored_image.title.to_s %><br />
+          <div class="time-string">
+            <br /><%= "PA: #{get_jst_string(favored_image.posted_at)}" %>
+          </div>
+        </div>
     </div>
   <% end %>
-</div>
+  <div id="loader">
+    <%= image_tag asset_path('round_loader_mini.gif')%>
+  </div>
 
+</div>
 <%= paginate @favored_images %>
